--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==06:43:31=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==06:45:07=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1782.03</p>
+                <p id="net-worth">1783.03</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-281.00</p>
+                <p id="unrealized-pl-value">-280.00</p>
             </div>
         </div>
     </header>
@@ -116,10 +116,10 @@ BuyLimit: 17828.75
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-
+BuyLimit: 5095.0
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-279.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-274.5</h2>
 
         </div>
         <div class="column">
