--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==06:57:53=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==07:09:05=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1778.03</p>
+                <p id="net-worth">1795.03</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
@@ -103,7 +103,7 @@
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-285.00</p>
+                <p id="unrealized-pl-value">-268.00</p>
             </div>
         </div>
     </header>
@@ -112,35 +112,40 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
+--
 BuyLimit: 17828.75
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24</h2>
+            <h2 id="column2-title">MNQM24</h2>
+--
+BuyLimit: 17828.75
+        </div>
+        <div class="column">
+            <h2 id="column3-title">MNQM24</h2>
+--
+BuyLimit: 17828.75
+        </div>
+        <div class="column">
+            <h2 id="column4-title">MNQM24</h2>
+--
+BuyLimit: 17828.75
+        </div>
+        <div class="column">
+            <h2 id="column5-title">MNQM24</h2>
+--
+BuyLimit: 17828.75
+        </div>
+        <div class="column">
+            <h2 id="column6-title">MESM24</h2>
 BuyLimit: 5095.0
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-283.5</h2>
+            <h2 id="column7-title">M2KM24==P/L:-266.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
+            <h2 id="column8-title">MCLK24</h2>
 
-        </div>
-        <div class="column">
-            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
-            <p id="stocks-content-5d">{{stocks-content-5}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
-            <p id="stocks-content-6d">{{stocks-content-6}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column7-title">{{COLUMN7_TITLE}}</h2>
-            <p id="stocks-content-7d">{{stocks-content-7}}</p>
-        </div>
-        <div class="column">
-            <h2 id="column8-title">{{COLUMN8_TITLE}}</h2>
-            <p id="stocks-content-8d">{{stocks-content-8}}</p>
         </div>
         <div class="column">
             <h2 id="column9-title">{{COLUMN9_TITLE}}</h2>
