--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:03:17=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:05:32=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1745.28</p>
+                <p id="net-worth">1762.78</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+5.25</p>
+                <p id="realized-pl-value">+9.25</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-323.00</p>
+                <p id="unrealized-pl-value">-309.50</p>
             </div>
         </div>
     </header>
@@ -117,14 +117,14 @@ BuyLimit: 5102.5
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
 BuyLimit: 5102.5
--Closed Order-
+SellLimit: 5099.25
         </div>
         <div class="column">
-            <h2 id="column3-title">MESM24==P/L:7.5</h2>
--Closed Order-
+            <h2 id="column3-title">MESM24==P/L:0.0</h2>
+SellLimit: 5099.25
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-308.5</h2>
+            <h2 id="column4-title">M2KM24==P/L:-318.5</h2>
 
         </div>
         <div class="column">
