--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==10:20:24=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==10:22:32=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1788.53</p>
+                <p id="net-worth">1782.03</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+11.50</p>
+                <p id="realized-pl-value">+11.00</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-286.00</p>
+                <p id="unrealized-pl-value">-292.00</p>
             </div>
         </div>
     </header>
@@ -112,23 +112,23 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
-BuyLimit: 5102.5
-        </div>
-        <div class="column">
-            <h2 id="column2-title">MESM24</h2>
-BuyLimit: 5102.5
-        </div>
-        <div class="column">
-            <h2 id="column3-title">MESM24==P/L:-5.0</h2>
 
         </div>
         <div class="column">
-            <h2 id="column4-title">M2KM24==P/L:-295.0</h2>
+            <h2 id="column2-title">MESM24==P/L:-7.5</h2>
 
         </div>
         <div class="column">
-            <h2 id="column5-title">MCLK24</h2>
+            <h2 id="column3-title">M2KM24==P/L:-294.5</h2>
 
+        </div>
+        <div class="column">
+            <h2 id="column4-title">MCLK24</h2>
+
+        </div>
+        <div class="column">
+            <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
+            <p id="stocks-content-5d">{{stocks-content-5}}</p>
         </div>
         <div class="column">
             <h2 id="column6-title">{{COLUMN6_TITLE}}</h2>
