--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(2)Trades==11:48:58=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==11:50:55=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1835.53</p>
+                <p id="net-worth">1831.28</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+11.00</p>
+                <p id="realized-pl-value">+14.25</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
-                <p id="unrealized-pl-value">-238.50</p>
+                <p id="unrealized-pl-value">-246.00</p>
             </div>
         </div>
     </header>
@@ -112,14 +112,14 @@
         <!-- Add columns up to Column 20 -->
         <div class="column">
             <h2 id="column1-title">MNQM24</h2>
--Closed Order-
+
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24==P/L:1.25</h2>
--Closed Order-
+            <h2 id="column2-title">MESM24</h2>
+
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-253.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-246.5</h2>
 
         </div>
         <div class="column">
