--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==01:37:51=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==01:39:40=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
                 <p>Net Worth</p>
-                <p id="net-worth">1840.28</p>
+                <p id="net-worth">1835.10</p>
             </div>
             <div class="header-column" id="realized-pl-column">
                 <p>Realized P/L</p>
-                <p id="realized-pl-value">+14.25</p>
+                <p id="realized-pl-value">0.00</p>
             </div>
             <div class="header-column" id="unrealized-pl-column">
                 <p>Un Realized P/L</p>
@@ -119,7 +119,7 @@
 
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-236.0</h2>
+            <h2 id="column3-title">M2KM24==P/L:-240.0</h2>
 
         </div>
         <div class="column">
