--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==06:29:55=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==06:31:45=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -116,10 +116,10 @@ BuyLimit: 17909.0
         </div>
         <div class="column">
             <h2 id="column2-title">MESM24</h2>
-
+BuyLimit: 5115.25
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-172.5</h2>
+            <h2 id="column3-title">M2KM24==P/L:-173.5</h2>
 
         </div>
         <div class="column">
