--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <header>
         <div class="summary-panel">
-            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==21:21:26=====================</p>
+            <p id="portfolio-summary">==========Portfolio Summary:(1)Trades==21:22:48=====================</p>
         </div>
         <div class="header-container">
             <div class="header-column" id="net-worth-column">
@@ -111,20 +111,20 @@
     <div class="container">
         <!-- Add columns up to Column 20 -->
         <div class="column">
-            <h2 id="column1-title">MNQM24</h2>
-
+            <h2 id="column1-title">{{COLUMN1_TITLE}}</h2>
+            <p id="stocks-content-1d">{{stocks-content-1}}</p>
         </div>
         <div class="column">
-            <h2 id="column2-title">MESM24</h2>
-
+            <h2 id="column2-title">{{COLUMN2_TITLE}}</h2>
+            <p id="stocks-content-2d">{{stocks-content-2}}</p>
         </div>
         <div class="column">
-            <h2 id="column3-title">M2KM24==P/L:-339.0</h2>
-
+            <h2 id="column3-title">{{COLUMN3_TITLE}}</h2>
+            <p id="stocks-content-3d">{{stocks-content-3}}</p>
         </div>
         <div class="column">
-            <h2 id="column4-title">MCLK24</h2>
-
+            <h2 id="column4-title">{{COLUMN4_TITLE}}</h2>
+            <p id="stocks-content-4d">{{stocks-content-4}}</p>
         </div>
         <div class="column">
             <h2 id="column5-title">{{COLUMN5_TITLE}}</h2>
